--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>360forecast.ml</title>
+    <link rel="icon" href="./favicon.ico" />
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div class="spinner">
+            <div class="double-bounce1"></div>
+            <div class="double-bounce2"></div>
+        </div>
+    </div>
+
     <script src="client.js"></script>
 </body>
 </html>
