--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
             <div class="double-bounce2"></div>
         </div>
     </div>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9bhzTYeC6zAHEEp_47F6tGYLNzVFRatk&libraries=places"></script>
     <script src="client.js"></script>
 </body>
 </html>
